Add `getForbiddenForAdjustment` method for identifying adjustment-ineligible nodes:
- Introduced `getForbiddenForAdjustment` in `Paths` class to compute nodes that cannot be adjusted upon based on possibly-directed paths.
- Added helper methods `forwardReach`, `backwardFilterByForwardRule`, and `isPossiblyOutEdge` for path traversal and validity checks.
- Improved amenable path handling with targeted forbidden set calculations.
- Enhanced adjustment logic with detailed Javadoc and robust graph type compatibility.